--- a/.github/workflows/beta.yml
+++ b/.github/workflows/beta.yml
@@ -51,5 +51,6 @@ jobs:
             DEFAULT_TMDB_ACCESS_TOKEN=${{ secrets.DEFAULT_TMDB_ACCESS_TOKEN }}
             DEFAULT_TMDB_API_KEY=${{ secrets.DEFAULT_TMDB_API_KEY }}
             DEFAULT_SC_API_KEY=${{ secrets.DEFAULT_SC_API_KEY }}
+            ENCRYPTION_KEY=${{ secrets.ENCRYPTION_KEY }}
           secrets: |
             GITHUB_TOKEN=${{ secrets.RELEASE_TOKEN }}
