更新beta编译参数

--- a/Dockerfile_beta
+++ b/Dockerfile_beta
@@ -11,7 +11,7 @@ RUN go mod tidy
 RUN echo $APP_VERSION
 RUN echo $PUBLISH_DATE
 # 构建应用
-RUN CGO_ENABLED=0 go build -ldflags="-s -w -X 'main.Version=${APP_VERSION}' -X 'main.PublishDate=${PUBLISH_DATE}'" -o QMediaSync .
+RUN CGO_ENABLED=0 go build -ldflags="-s -w -X 'main.Version=${APP_VERSION}' -X 'main.PublishDate=${PUBLISH_DATE}' -X main.FANART_API_KEY=${ANART_API_KEY} -X main.DEFAULT_TMDB_ACCESS_TOKEN=${DEFAULT_TMDB_ACCESS_TOKEN} -X main.DEFAULT_TMDB_API_KEY=${DEFAULT_TMDB_API_KEY} -X main.DEFAULT_SC_API_KEY=${DEFAULT_SC_API_KEY} -X main.ENCRYPTION_KEY=${ENCRYPTION_KEY}" -o QMediaSync .
 
 # 运行阶段
 FROM qicfan/qms-build-base:latest
